Fix footer gap

--- a/css/styles.css
+++ b/css/styles.css
@@ -435,7 +435,7 @@ footer {
 .footer-social-list {
   display: flex;
   align-items: center;
-  gap: 24px;
+  gap: 16px;
 }
 .footer-social-link {
   display: flex;
